src/ui/render/snapshots/herdr_worktree_nav__ui__render__panes__tests__keeps_the_meta_column_readable_by_shortening_labels_in_a_narrow_pane.snap
---
source: src/ui/render/panes.rs
expression: "screen(&PanesState::new(tree(), None), 46, 14)"
---
" / search panes                       5 panes "
"──────────────────────────────────────────────"
" ◆ ● me/app (3)                              █"
"   ├── ● main             /wt/main           █"
" ◆ │  ├── ● claude        w1:p1              █"
"   │  └── · shell         w1:p2              █"
"   ├── ○ feat/login       /wt/feat-login     █"
"   │  └── ○ codex         w2:p1              █"
"   └── · fix…  no pane    /wt/fix-crash      █"
"                                             │"
"   ● me/site (1)                             │"
"   └── ● develop          /wt/develop        │"
" me/app · main · w1:p1 · working · /wt/main ──"
" ↵ jump  ⇥ branches  / search  esc close      "
