src/ui/render/snapshots/herdr_worktree_nav__ui__render__panes__tests__scrolls_and_shows_a_scrollbar_when_the_list_does_not_fit.snap
---
source: src/ui/render/panes.rs
expression: "screen(&state, 92, 10)"
---
" / search panes                                                                     5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
" ◆ │  ├── ● claude                w1:p1                                                    │"
"   │  └── · shell                 w1:p2                                                    █"
"   ├── ○ feat/login               /wt/feat-login                                           █"
"   │  └── ○ codex                 w2:p1                                                    │"
"   └── · fix/crash  no pane       /wt/fix-crash                                            │"
"                                                                                           │"
" me/app · feat/login · w2:p1 · idle · /wt/feat-login ───────────────────────────────────────"
" ↵ jump  n new  ←→ repo  ⇥ branches  / search  b/w/i/d/a states  shift+d remove  esc close  "
