src/ui/render/snapshots/herdr_worktree_nav__ui__render__panes__tests__the_sweep_says_it_is_still_asking_gh_before_it_says_what_it_found.snap
---
source: src/ui/render/panes.rs
expression: "screen(&state, 92, 20)"
---
" / sweep  ⠋ asking gh…                                                             1 marked "
"────────────────────────────────────────────────────────────────────────────────────────────"
" ◆ ● me/app (3)                                                                             "
"   ├── ● main                           /wt/main                                            "
" ◆ │  ├── ● claude                      w1:p1                                               "
"   │  └── · shell                       w1:p2                                               "
"   ├── ○ feat/login  gone               /wt/feat-login                                      "
"   │  └── ○ codex                       w2:p1                                               "
"[x]└── · fix/crash  gone  no pane       /wt/fix-crash                                       "
"                                                                                            "
"   ● me/site (1)                                                                            "
"   ├── ● develop                        /wt/develop                                         "
"   │  └── ● claude                      w3:p1                                               "
"[ ]└── · chore/deps  no pane            /wt/chore-deps                                      "
"                                                                                            "
"   · not in any repository (1)                                                              "
"   └── · shell                          w9:p1                                               "
"                                                                                            "
" me/app · main · w1:p1 · working · /wt/main ────────────────────────────────────────────────"
" space mark  ↑↓ move  ←→ repo  ↵ delete marked  shift+s done  esc done                      "
